# ascend-boat

./: .gitignore  README.md
acl_operator_add/: .gitignore  README.md
acl_operator_add/scripts/: official5.2.0.sh  official_config.sh
ascend310_resnet50_preprocess_sample/: .gitignore  README.md  main.cc
ascend310_single_op_sample/: .gitignore  README.md
camera/: CMakeLists.txt  main.cpp  media.cpp
camera_async/: main.cpp
camera_sample/: CMakeLists.txt
handbook/: Atlas 200 DK 安装部署技术手册.md  CMake的使用.md  MindSpore在Atlas上的安装与推理使用.md  Python 3.7.5的编译部署.md
mnist/: CMakeLists.txt  main.cc
mnist/model/: mnist.mindir
scripts/: 5.0.2.alpha005.sh  official5.0.2.sh  opencv_ffmpeg.sh
